Fix iggg canvas on mobile

--- a/assets/scss/iggg.scss
+++ b/assets/scss/iggg.scss
@@ -6,7 +6,7 @@ main.page-iggg {
   max-width: unset;
   text-align: center;
 
-  .canvas-wrapper {
+  #canvas-wrapper {
     width: 100%;
     overflow-x: auto;
   }
@@ -14,6 +14,7 @@ main.page-iggg {
   canvas {
     margin: 2em auto;
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
   }
 
   #location-code {
